--- a/index.html
+++ b/index.html
@@ -3,10 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/shared.css" />
     <link rel="stylesheet" href="styles/style.css" />
     <title>Sloth Ui || Home</title>
   </head>
   <body>
-    <h1>Test Header</h1>
+    <header>
+      <!-- navbar area start  -->
+      <nav></nav>
+      <!-- navbar area end-->
+      <!-- banner area start  -->
+      <section>
+        <h1>hello</h1>
+      </section>
+      <!-- banner area end  -->
+    </header>
+    <main>
+      <!-- spoonser banner start  -->
+      <section class="spoonser-container flex flex-col items-center">
+        <!-- First row with 6 logos -->
+        <div class="sponsor-row flex justify-center flex-wrap">
+          <img src="./assets/spoonsors/s_logo_1.png" alt="Sponsor 1" />
+          <img src="./assets/spoonsors/s_logo_2.png" alt="Sponsor 2" />
+          <img src="./assets/spoonsors/s_logo_3.png" alt="Sponsor 3" />
+          <img src="./assets/spoonsors/s_logo_4.png" alt="Sponsor 4" />
+          <img src="./assets/spoonsors/s_logo_5.png" alt="Sponsor 5" />
+          <img src="./assets/spoonsors/s_logo_6.png" alt="Sponsor 6" />
+        </div>
+
+        <!-- Second row with 5 logos -->
+        <div class="sponsor-row flex justify-center flex-wrap">
+          <img src="./assets/spoonsors/s_logo_7.png" alt="Sponsor 7" />
+          <img src="./assets/spoonsors/s_logo_8.png" alt="Sponsor 8" />
+          <img src="./assets/spoonsors/s_logo_9.png" alt="Sponsor 9" />
+          <img src="./assets/spoonsors/s_logo_10.png" alt="Sponsor 10" />
+          <img src="./assets/spoonsors/s_logo_11.png" alt="Sponsor 11" />
+        </div>
+      </section>
+      <!-- spoonser banner end -->
+    </main>
   </body>
 </html>
