--- a/index.html
+++ b/index.html
@@ -40,6 +40,106 @@
         </div>
       </section>
       <!-- spoonser banner end -->
+
+      <!-- primary features start  -->
+      <section class="max-width mx-auto mt-96">
+        <div class="section-title flex flex-col justify-center items-center">
+          <h5 class="font-semiBold text-sm text-center">Our Main Features</h5>
+          <h1 class="font-extraBold text-4xl text-heading-color text-center">
+            Our Primary Features
+          </h1>
+          <p
+            class="font-normal text-center text-xl text-sub-heading-color mx-auto"
+          >
+            Volutpat commodo sed egestas egestas fringilla phasellus. Tincidunt
+            eget nullam non nisi. Nisi porta lorem mollis aliquam ut porttitor
+            leo.
+          </p>
+        </div>
+        <div class="grid feature-container gap-8 mt-16">
+          <!-- feature-card 01  -->
+          <div class="feature-card flex flex-col items-center justify-center">
+            <figure>
+              <img src="./assets/features/icon1.png" alt="feature icon" />
+            </figure>
+            <h3 class="font-bold text-center text-heading-color">
+              Lazy Efficient
+            </h3>
+            <p class="text-center text-base text-sub-heading-color">
+              A cras semper auctor neque. Proin libero nunc consequat interdum
+              varius sit. Libero volutpat sed cras ornare arcu dui vivamus arcu
+              felis.
+            </p>
+          </div>
+          <!-- feature-card 02  -->
+          <div class="feature-card flex flex-col items-center justify-center">
+            <figure>
+              <img src="./assets/features/icon2.png" alt="feature icon" />
+            </figure>
+            <h3 class="font-bold text-center text-heading-color">
+              Streamlined Process
+            </h3>
+            <p class="text-center text-base text-sub-heading-color">
+              Montes nascetur ridiculus mus mauris vitae ultricies leo integer
+              malesuada. Orci porta non pulvinar neque laoreet.
+            </p>
+          </div>
+          <!-- feature-card 03  -->
+          <div class="feature-card flex flex-col items-center justify-center">
+            <figure>
+              <img src="./assets/features/icon3.png" alt="feature icon" />
+            </figure>
+            <h3 class="font-bold text-center text-heading-color">
+              Minimum Effort
+            </h3>
+            <p class="text-center text-base text-sub-heading-color">
+              Tincidunt eget nullam non nisi est sit amet facilisis magna.
+              Rhoncus dolor purus non enim praesent elementum.
+            </p>
+          </div>
+          <!-- feature-card 04  -->
+          <div class="feature-card flex flex-col items-center justify-center">
+            <figure>
+              <img src="./assets/features/icon4.png" alt="feature icon" />
+            </figure>
+            <h3 class="font-bold text-center text-heading-color">
+              Absolutely Easy To Use
+            </h3>
+            <p class="text-center text-base text-sub-heading-color">
+              Rutrum quisque non tellus orci ac. Purus viverra accumsan in nisl.
+              Id interdum velit laoreet id donec ultrices adisipicing elit.
+            </p>
+          </div>
+          <!-- feature-card 05  -->
+          <div class="feature-card flex flex-col items-center justify-center">
+            <figure>
+              <img src="./assets/features/icon5.png" alt="feature icon" />
+            </figure>
+            <h3 class="font-bold text-center text-heading-color">
+              Just Sleep & Chill
+            </h3>
+            <p class="text-center text-base text-sub-heading-color">
+              Bibendum est ultricies integer quis auctor elit. Ultrices in
+              iaculis nunc sed. A scelerisque purus semper eget. Facilisi morbi
+              tempus iaculi.
+            </p>
+          </div>
+          <!-- feature-card 06  -->
+          <div class="feature-card flex flex-col items-center justify-center">
+            <figure>
+              <img src="./assets/features/icon1.png" alt="feature icon" />
+            </figure>
+            <h3 class="font-bold text-center text-heading-color">
+              Don’t Worry About Life
+            </h3>
+            <p class="text-center text-base text-sub-heading-color">
+              Pharetra diam sit amet nisl suscipit adipiscing bibendum est.
+              Risus ultricies tristique nulla aliquet enim tortor.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- primary features end -->
     </main>
   </body>
 </html>
