desgined stats section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <!-- spoonser banner end -->
 
       <!-- primary features start  -->
-      <section class="max-width mx-auto mt-96">
+      <section class="max-width mx-auto mt-96 mb-96">
         <div class="section-title flex flex-col justify-center items-center">
           <h5 class="font-semiBold text-sm text-center">Our Main Features</h5>
           <h1 class="font-extraBold text-4xl text-heading-color text-center">
@@ -140,6 +140,46 @@
         </div>
       </section>
       <!-- primary features end -->
+
+      <!-- statistics section start  -->
+      <section class="statistics-container">
+        <div class="max-width mx-auto pt-96 pb-96">
+          <div class="section-title flex flex-col justify-center items-center">
+            <figure>
+              <img src="./assets/HouseSimple.png" alt="" />
+            </figure>
+            <h1 class="font-extraBold text-4xl text-heading-color text-center">
+              Work lazily and achieve the result you want.
+            </h1>
+            <p
+              class="font-normal text-center text-xl text-sub-heading-color mx-auto"
+            >
+              Liquam id diam maecenas ultricies mi eget mauris pharetra et.
+              Feugiat pretium nibh ipsum consequat nisl vel pretium lectus.
+              Fermentum iaculis eu non diam.
+            </p>
+          </div>
+          <!-- stats area:::data -->
+          <div class="grid statistics-data-container mt-16 mx-auto">
+            <!-- stat card 01  -->
+            <div class="statistics-data-card border-end border-bottom">
+              <h1 class="font-bold text-center">420%</h1>
+              <p class="font-bold text-lg text-center">Data Efficiency</p>
+            </div>
+            <!-- stat card 02  -->
+            <div class="statistics-data-card border-end border-bottom">
+              <h1 class="font-bold text-center">708+</h1>
+              <p class="font-bold text-lg text-center">Conversion Rate</p>
+            </div>
+            <!-- stat card 03  -->
+            <div class="statistics-data-card">
+              <h1 class="font-bold text-center">1.82M</h1>
+              <p class="font-bold text-lg text-center">AILLM Scale</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- statistics section end -->
     </main>
   </body>
 </html>
