designed target audience section

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
       <!-- primary features start  -->
       <section class="max-width mx-auto mt-96 mb-96">
+        <!-- section title start -->
         <div class="section-title flex flex-col justify-center items-center">
           <h5 class="font-semiBold text-sm text-center">Our Main Features</h5>
           <h1 class="font-extraBold text-4xl text-heading-color text-center">
@@ -56,6 +57,7 @@
             leo.
           </p>
         </div>
+        <!-- section title end  -->
         <div class="grid feature-container gap-8 mt-16">
           <!-- feature-card 01  -->
           <div class="feature-card flex flex-col items-center justify-center">
@@ -180,6 +182,63 @@
         </div>
       </section>
       <!-- statistics section end -->
+
+      <!-- who is it for section start  -->
+      <section class="max-width mx-auto pb-96 pt-96">
+        <!-- sectin title start  -->
+        <div class="section-title flex flex-col justify-center items-start">
+          <h5 class="font-semiBold text-sm">Who is it for?</h5>
+          <h1 class="font-extraBold text-4xl text-heading-color">
+            What the procrastinators say
+          </h1>
+          <p class="font-normal text-xl text-sub-heading-color">
+            Mi ipsum faucibus vitae aliquet nec. At tempor commodo ullamcorper a
+            lacus. Bibendum at varius vel pharetra vel.
+          </p>
+        </div>
+        <!-- section title end  -->
+        <!--target-audience content container start  -->
+        <div
+          class="target-audience-container grid justify-center items-center mt-16"
+        >
+          <!-- content section  -->
+          <div class="target-audience-content flex flex-col">
+            <!-- content card 01  -->
+            <div class="target-audience-content-card selected">
+              <h3>Convallis tellus id interdum velit</h3>
+              <p class="text-base font-normal text-sub-heading-color">
+                Est pellentesque elit ullamcorper dignissim cras. In
+                pellentesque massa placerat duis ultricies.
+              </p>
+            </div>
+            <!-- content card 02  -->
+            <div class="target-audience-content-card">
+              <h3>Id interdum velit laoreet id donec ultrices</h3>
+              <p class="text-base font-normal text-sub-heading-color">
+                Donec massa sapien faucibus et molestie ac feugiat sed. Congue
+                mauris rhoncus aenean vel elit scelerisque.
+              </p>
+            </div>
+            <!-- content card 01  -->
+            <div class="target-audience-content-card">
+              <h3>Sapien et ligula ullamcorper malesuada</h3>
+              <p class="text-base font-normal text-sub-heading-color">
+                Donec massa sapien faucibus et molestie ac feugiat sed. Congue
+                mauris rhoncus aenean vel elit scelerisque.
+              </p>
+            </div>
+          </div>
+
+          <!-- image section  -->
+          <div class="target-audience-content">
+            <figure>
+              <img src="./assets/dash_d_3.png" alt="" />
+            </figure>
+          </div>
+        </div>
+        <!-- target-audience content container end -->
+      </section>
+      <!-- who is it for section end  -->
     </main>
   </body>
 </html>
