--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <!-- primary features end -->
 
       <!-- statistics section start  -->
-      <section class="statistics-container">
+      <section class="container">
         <div class="max-width mx-auto pt-96 pb-96">
           <div class="section-title flex flex-col justify-center items-center">
             <figure>
@@ -239,6 +239,287 @@
         <!-- target-audience content container end -->
       </section>
       <!-- who is it for section end  -->
+
+      <!-- testimonial section start   -->
+      <section class="container">
+        <div class="max-width mx-auto pt-96 pb-96">
+          <!-- section title start -->
+          <div class="section-title flex flex-col justify-center items-center">
+            <h5 class="font-semiBold text-sm text-center">Testimonials</h5>
+            <h1 class="font-extraBold text-4xl text-heading-color text-center">
+              What People Say
+            </h1>
+            <p
+              class="font-normal text-center text-xl text-sub-heading-color mx-auto"
+            >
+              You can visit our office anytime but please don’t stalk us or
+              don’t be creepy.
+            </p>
+          </div>
+          <!-- reviews area start  -->
+          <div class="outer-reviews-container flex justify-center mt-16">
+            <!-- column 1  -->
+            <div class="reviews-container flex flex-col">
+              <!-- review card 01  -->
+              <div class="reviews-card">
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <p class="text-base font-normal text-lg text-sub-heading-color">
+                  Lorem ipsum dolor sit amet, consectetur ad-zzz-ing elit. Proin
+                  vel urna at metus tempor mattis, or not, whatever.
+                </p>
+                <!-- author info  -->
+                <div class="review-author flex items-center">
+                  <figure class="">
+                    <img src="./assets/author/a_1.png" alt="" />
+                  </figure>
+                  <div>
+                    <h5 class="text-base font-bold text-heading-color">
+                      X_AE_A-13
+                    </h5>
+                    <p class="text-base font-normal text-sub-heading-color">
+                      Product Designer, slothUI
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <!-- review card 02  -->
+              <div class="reviews-card">
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <p class="text-base font-normal text-lg text-sub-heading-color">
+                  Nisi porta lorem mollis aliquam ut porttitor leo. Sed odio
+                  morbi quis commodo. Arcu non odio euismod lacinia at quis. Nec
+                  sagittis aliquam malesuada bibendum arcu vitae elementum
+                  curabitur vitae.
+                </p>
+                <!-- author info  -->
+                <div class="review-author flex items-center">
+                  <figure class="">
+                    <img src="./assets/author/a_2.png" alt="" />
+                  </figure>
+                  <div>
+                    <h5 class="text-base font-bold text-heading-color">
+                      Oarack Babama
+                    </h5>
+                    <p class="text-base font-normal text-sub-heading-color">
+                      Former President of US
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <!-- review card 03  -->
+              <div class="reviews-card">
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star-half star-color"></i>
+                <i class="fa-regular fa-star star-color"></i>
+                <i class="fa-regular fa-star star-color"></i>
+                <p class="text-base font-normal text-lg text-sub-heading-color">
+                  Sagittis eu volutpat odio facilisis mauris sit amet massa.
+                  Urna et pharetra pharetra massa.
+                </p>
+                <!-- author info  -->
+                <div class="review-author flex items-center">
+                  <figure class="">
+                    <img src="./assets/author/a_3.png" alt="" />
+                  </figure>
+                  <div>
+                    <h5 class="text-base font-bold text-heading-color">
+                      Boe Jiden
+                    </h5>
+                    <p class="text-base font-normal text-sub-heading-color">
+                      Former President Of Canada
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- column 2  -->
+            <div class="reviews-container flex flex-col">
+              <!-- review card 01  -->
+              <div class="reviews-card">
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star-half star-color"></i>
+                <i class="fa-regular fa-star star-color"></i>
+                <p class="text-base font-normal text-lg text-sub-heading-color">
+                  Posuere urna nec tincidunt praesent semper feugiat nibh sed.
+                  Velit dignissim sodales ut eu.
+                </p>
+                <!-- author info  -->
+                <div class="review-author flex items-center">
+                  <figure class="">
+                    <img src="./assets/author/a_4.png" alt="" />
+                  </figure>
+                  <div>
+                    <h5 class="text-base font-bold text-heading-color">
+                      Azunyan U. Wu
+                    </h5>
+                    <p class="text-base font-normal text-sub-heading-color">
+                      CEO, nextlife.ai
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <!-- review card 02  -->
+              <div class="reviews-card">
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star-half star-color"></i>
+                <p class="text-base font-normal text-lg text-sub-heading-color">
+                  Accumsan tortor posuere ac ut consequat. Quis varius quam
+                  quisque id diam vel. Commodo odio aenean sed adipiscing diam
+                  donec adipiscing. Vel pharetra vel turpis nunc eget.
+                </p>
+                <!-- author info  -->
+                <div class="review-author flex items-center">
+                  <figure class="">
+                    <img src="./assets/author/a_5.png" alt="" />
+                  </figure>
+                  <div>
+                    <h5 class="text-base font-bold text-heading-color">
+                      Saylor Twift
+                    </h5>
+                    <p class="text-base font-normal text-sub-heading-color">
+                      Famous Singer
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <!-- review card 03  -->
+              <div class="reviews-card">
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <p class="text-base font-normal text-lg text-sub-heading-color">
+                   Cras fermentum odio eu feugiat pretium nibh ipsum consequat
+                  nisl. Nec nam aliquam sem et tortor consequat id porta nibh.
+                  Viverra suspendisse. Lacus sed viverra tellus in hac habitasse
+                  platea dictumst. Elit at imperdiet dui accumsan.
+                </p>
+                <!-- author info  -->
+                <div class="review-author flex items-center">
+                  <figure class="">
+                    <img src="./assets/author/a_6.png" alt="" />
+                  </figure>
+                  <div>
+                    <h5 class="text-base font-bold text-heading-color">
+                      Vermillion D. Gray
+                    </h5>
+                    <p class="text-base font-normal text-sub-heading-color">
+                      CEO, hacklife.ai
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- column 3  -->
+            <div class="reviews-container flex flex-col">
+              <!-- review card 01  -->
+              <div class="reviews-card">
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-regular fa-star star-color"></i>
+                <p class="text-base font-normal text-lg text-sub-heading-color">
+                  Sit amet est placerat in. Blandit cursus risus at ultrices mi
+                  tempus imperdiet. Volutpat commodo sed egestas egestas
+                  fringilla phasellus. Tincidunt eget nullam non nisi. 
+                </p>
+                <!-- author info  -->
+                <div class="review-author flex items-center">
+                  <figure class="">
+                    <img src="./assets/author/a_7.png" alt="" />
+                  </figure>
+                  <div>
+                    <h5 class="text-base font-bold text-heading-color">
+                      Mechatronics Yi
+                    </h5>
+                    <p class="text-base font-normal text-sub-heading-color">
+                      CTO, fin4win.ai
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <!-- review card 02  -->
+              <div class="reviews-card">
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-star-half fa-star star-color"></i>
+                <i class="fa-regular fa-star star-color"></i>
+                <p class="text-base font-normal text-lg text-sub-heading-color">
+                  Venenatis cras sed felis eget velit aliquet. Velit scelerisque
+                  in dictum non consectetur. Felis eget velit aliquet sagittis.
+                  Ultricies integer quis auctor elit sed vulputate mi. 
+                </p>
+                <!-- author info  -->
+                <div class="review-author flex items-center">
+                  <figure class="">
+                    <img src="./assets/author/a_8.png" alt="" />
+                  </figure>
+                  <div>
+                    <h5 class="text-base font-bold text-heading-color">
+                      Asuna Yuuki
+                    </h5>
+                    <p class="text-base font-normal text-sub-heading-color">
+                      Virtual Swordsman
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <!-- review card 03  -->
+              <div class="reviews-card">
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-solid fa-star star-color"></i>
+                <i class="fa-regular fa-star star-color"></i>
+                <p class="text-base font-normal text-lg text-sub-heading-color">
+                  Viverra accumsan in nisl nisi scelerisque eu. Vitae congue eu
+                  consequat ac felis donec.
+                </p>
+                <!-- author info  -->
+                <div class="review-author flex items-center">
+                  <figure class="">
+                    <img src="./assets/author/a_9.png" alt="" />
+                  </figure>
+                  <div>
+                    <h5 class="text-base font-bold text-heading-color">
+                      Zuckman Wu
+                    </h5>
+                    <p class="text-base font-normal text-sub-heading-color">
+                      CEO, tech4life.ai
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- reviews area end -->
+        </div>
+      </section>
+      <!-- testimonial section end -->
     </main>
+
+    <!-- font awesome icons set  -->
+
+    <script
+      src="https://kit.fontawesome.com/0c1139f033.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
