address section added

--- a/index.html
+++ b/index.html
@@ -513,6 +513,70 @@
         </div>
       </section>
       <!-- testimonial section end -->
+
+      <!-- our office start  -->
+      <section class="max-width mx-auto pb-96 pt-96">
+        <!-- sectin title start  -->
+        <div class="section-title flex flex-col justify-center items-start">
+          <h5 class="font-semiBold text-sm">Visit Us Anytime</h5>
+          <h1 class="font-extraBold text-4xl text-heading-color">Our Office</h1>
+          <p class="font-normal text-xl text-sub-heading-color">
+            You can visit our office anytime but please don’t stalk us or don’t
+            be creepy.
+          </p>
+        </div>
+
+        <!-- address area  -->
+        <div class="address-container mt-16 grid gap-8">
+          <!-- address card 01  -->
+          <div class="address-card">
+            <i class="fa-solid fa-location-dot"></i>
+            <h3 class="text-xl font-extraBold text-heading-color">Japan</h3>
+            <p class="text-base font-normal text-sub-heading-color">
+              221b Banzai Street
+            </p>
+            <p class="text-base font-normal text-sub-heading-color">
+              Tokyo, TO 77812
+            </p>
+          </div>
+          <!-- address card 02  -->
+          <div class="address-card">
+            <i class="fa-solid fa-location-dot"></i>
+            <h3 class="text-xl font-extraBold text-heading-color">USA</h3>
+            <p class="text-base font-normal text-sub-heading-color">
+              221b Freedom Street
+            </p>
+            <p class="text-base font-normal text-sub-heading-color">
+              New York, NY 21231
+            </p>
+          </div>
+          <!-- address card 03  -->
+          <div class="address-card">
+            <i class="fa-solid fa-location-dot"></i>
+            <h3 class="text-xl font-extraBold text-heading-color">Canada</h3>
+            <p class="text-base font-normal text-sub-heading-color">
+              221b Maple Syrup Street
+            </p>
+            <p class="text-base font-normal text-sub-heading-color">
+              Ottawa, OW 77847
+            </p>
+          </div>
+          <!-- address card 04  -->
+          <div class="address-card">
+            <i class="fa-solid fa-location-dot"></i>
+            <h3 class="text-xl font-extraBold text-heading-color">
+              South Korea
+            </h3>
+            <p class="text-base font-normal text-sub-heading-color">
+              221b Samyang Street
+            </p>
+            <p class="text-base font-normal text-sub-heading-color">
+              Gangnam, GM 22124
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- our office end -->
     </main>
 
     <!-- font awesome icons set  -->
