added faq section

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
               What People Say
             </h1>
             <p
-              class="font-normal text-center text-xl text-sub-heading-color mx-auto"
+              class="font-normal text-center text-lg text-sub-heading-color mx-auto"
             >
               You can visit our office anytime but please don’t stalk us or
               don’t be creepy.
@@ -520,7 +520,7 @@
         <div class="section-title flex flex-col justify-center items-start">
           <h5 class="font-semiBold text-sm">Visit Us Anytime</h5>
           <h1 class="font-extraBold text-4xl text-heading-color">Our Office</h1>
-          <p class="font-normal text-xl text-sub-heading-color">
+          <p class="font-normal text-lg text-sub-heading-color">
             You can visit our office anytime but please don’t stalk us or don’t
             be creepy.
           </p>
@@ -577,6 +577,114 @@
         </div>
       </section>
       <!-- our office end -->
+
+      <!-- faq section start  -->
+      <section class="container">
+        <div class="max-width-800 mx-auto pt-96 pb-96">
+          <!-- section title start -->
+          <div class="section-title flex flex-col justify-center items-center">
+            <h5 class="font-semiBold text-sm text-center">FAQ</h5>
+            <h1 class="font-extraBold text-4xl text-heading-color text-center">
+              Frequently Asked Questions
+            </h1>
+            <p
+              class="font-normal text-center text-lg text-sub-heading-color mx-auto"
+            >
+              Fermentum iaculis eu non diam phasellus vestibulum. Volutpat
+              commodo sed egestas egestas fringilla phasellus. Donec ac odio
+              tempor orci dapibus ultrices.
+            </p>
+          </div>
+          <div class="faq-container mt-16">
+            <!-- faq card 01  -->
+            <div class="faq-card">
+             <div class="faq-question"">
+                 <div class="flex items-center justify-center">
+                 <div><i class="fa-regular fa-circle-question"></i></div>
+                 <h3 class="text-base font-extraBold text-heading-color">
+               Enim sed faucibus turpis in eu mi bibendum neque egestas?
+              </h3>
+               </div>
+              <div>
+                <i class="fas fa-chevron-down"></i>
+              </div>
+             </div>
+              <p class="faq-answer text-sm text-sub-heading-color">
+               Mattis ullamcorper velit sed ullamcorper morbi tincidunt. In metus vulputate eu scelerisque felis imperdiet proin fermentum leo. Diam quis enim lobortis scelerisque fermentum dui faucibus. Urna nunc id cursus metus aliquam eleifend mi. Gravida quis blandit turpis cursus in hac.
+              </p>
+            </div>
+            <!-- faq card 02  -->
+            <div class="faq-card">
+             <div class="faq-question"">
+                 <div class="flex items-center justify-center">
+                 <div><i class="fa-regular fa-circle-question"></i></div>
+                 <h3 class="text-base font-extraBold text-heading-color">
+               Amet consectetur adipiscing elit pellentesque habitant morbi tristique?
+              </h3>
+               </div>
+              <div>
+                <i class="fas fa-chevron-down"></i>
+              </div>
+             </div>
+              <p class="faq-answer text-sm text-sub-heading-color">
+               Mattis ullamcorper velit sed ullamcorper morbi tincidunt. In metus vulputate eu scelerisque felis imperdiet proin fermentum leo. Diam quis enim lobortis scelerisque fermentum dui faucibus. Urna nunc id cursus metus aliquam eleifend mi. Gravida quis blandit turpis cursus in hac.
+              </p>
+            </div>
+            <!-- faq card 03  -->
+            <div class="faq-card">
+             <div class="faq-question"">
+                  <div class="flex items-center justify-center">
+                 <div><i class="fa-regular fa-circle-question"></i></div>
+                 <h3 class="text-base font-extraBold text-heading-color">
+               Elit pellentesque habitant morbi tristique senectus?
+              </h3>
+               </div>
+              <div>
+                <i class="fas fa-chevron-down"></i>
+              </div>
+             </div>
+              <p class="faq-answer text-sm text-sub-heading-color">
+               Mattis ullamcorper velit sed ullamcorper morbi tincidunt. In metus vulputate eu scelerisque felis imperdiet proin fermentum leo. Diam quis enim lobortis scelerisque fermentum dui faucibus. Urna nunc id cursus metus aliquam eleifend mi. Gravida quis blandit turpis cursus in hac.
+              </p>
+            </div>
+            <!-- faq card 04  -->
+            <div class="faq-card">
+             <div class="faq-question"">
+               <div class="flex items-center justify-center">
+                 <div><i class="fa-regular fa-circle-question"></i></div>
+                 <h3 class="text-base font-extraBold text-heading-color">
+               Gravida quis blandit turpis cursus in hac. Mi ipsum faucibus vitae aliquet nec?
+              </h3>
+               </div>
+              <div>
+                <i class="fas fa-chevron-down"></i>
+              </div>
+             </div>
+              <p class="faq-answer text-sm text-sub-heading-color">
+               Mattis ullamcorper velit sed ullamcorper morbi tincidunt. In metus vulputate eu scelerisque felis imperdiet proin fermentum leo. Diam quis enim lobortis scelerisque fermentum dui faucibus. Urna nunc id cursus metus aliquam eleifend mi. Gravida quis blandit turpis cursus in hac.
+              </p>
+            </div>
+            <!-- faq card 05  -->
+            <div class="faq-card">
+             <div class="faq-question"">
+                 <div class="flex items-center justify-center">
+                 <div><i class="fa-regular fa-circle-question"></i></div>
+                 <h3 class="text-base font-extraBold text-heading-color">
+                Est pellentesque elit ullamcorper dignissim cras. In pellentesque massa placerat?
+              </h3>
+               </div>
+              <div>
+                <i class="fas fa-chevron-down"></i>
+              </div>
+             </div>
+              <p class="faq-answer text-sm text-sub-heading-color">
+               Mattis ullamcorper velit sed ullamcorper morbi tincidunt. In metus vulputate eu scelerisque felis imperdiet proin fermentum leo. Diam quis enim lobortis scelerisque fermentum dui faucibus. Urna nunc id cursus metus aliquam eleifend mi. Gravida quis blandit turpis cursus in hac.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- faq section end -->
     </main>
 
     <!-- font awesome icons set  -->
@@ -585,5 +693,6 @@
       src="https://kit.fontawesome.com/0c1139f033.js"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
