--- a/index.html
+++ b/index.html
@@ -598,94 +598,239 @@
           <div class="faq-container mt-16">
             <!-- faq card 01  -->
             <div class="faq-card">
-             <div class="faq-question"">
-                 <div class="flex items-center justify-center">
-                 <div><i class="fa-regular fa-circle-question"></i></div>
-                 <h3 class="text-base font-extraBold text-heading-color">
-               Enim sed faucibus turpis in eu mi bibendum neque egestas?
-              </h3>
-               </div>
-              <div>
-                <i class="fas fa-chevron-down"></i>
+              <div class="faq-question">
+                <div class="flex items-center justify-center">
+                  <div><i class="fa-regular fa-circle-question"></i></div>
+                  <h3 class="text-base font-extraBold text-heading-color">
+                    Enim sed faucibus turpis in eu mi bibendum neque egestas?
+                  </h3>
+                </div>
+                <div>
+                  <i class="fas fa-chevron-down"></i>
+                </div>
               </div>
-             </div>
               <p class="faq-answer text-sm text-sub-heading-color">
-               Mattis ullamcorper velit sed ullamcorper morbi tincidunt. In metus vulputate eu scelerisque felis imperdiet proin fermentum leo. Diam quis enim lobortis scelerisque fermentum dui faucibus. Urna nunc id cursus metus aliquam eleifend mi. Gravida quis blandit turpis cursus in hac.
+                Mattis ullamcorper velit sed ullamcorper morbi tincidunt. In
+                metus vulputate eu scelerisque felis imperdiet proin fermentum
+                leo. Diam quis enim lobortis scelerisque fermentum dui faucibus.
+                Urna nunc id cursus metus aliquam eleifend mi. Gravida quis
+                blandit turpis cursus in hac.
               </p>
             </div>
             <!-- faq card 02  -->
             <div class="faq-card">
-             <div class="faq-question"">
-                 <div class="flex items-center justify-center">
-                 <div><i class="fa-regular fa-circle-question"></i></div>
-                 <h3 class="text-base font-extraBold text-heading-color">
-               Amet consectetur adipiscing elit pellentesque habitant morbi tristique?
-              </h3>
-               </div>
-              <div>
-                <i class="fas fa-chevron-down"></i>
+              <div class="faq-question">
+                <div class="flex items-center justify-center">
+                  <div><i class="fa-regular fa-circle-question"></i></div>
+                  <h3 class="text-base font-extraBold text-heading-color">
+                    Amet consectetur adipiscing elit pellentesque habitant morbi
+                    tristique?
+                  </h3>
+                </div>
+                <div>
+                  <i class="fas fa-chevron-down"></i>
+                </div>
               </div>
-             </div>
               <p class="faq-answer text-sm text-sub-heading-color">
-               Mattis ullamcorper velit sed ullamcorper morbi tincidunt. In metus vulputate eu scelerisque felis imperdiet proin fermentum leo. Diam quis enim lobortis scelerisque fermentum dui faucibus. Urna nunc id cursus metus aliquam eleifend mi. Gravida quis blandit turpis cursus in hac.
+                Mattis ullamcorper velit sed ullamcorper morbi tincidunt. In
+                metus vulputate eu scelerisque felis imperdiet proin fermentum
+                leo. Diam quis enim lobortis scelerisque fermentum dui faucibus.
+                Urna nunc id cursus metus aliquam eleifend mi. Gravida quis
+                blandit turpis cursus in hac.
               </p>
             </div>
             <!-- faq card 03  -->
             <div class="faq-card">
-             <div class="faq-question"">
-                  <div class="flex items-center justify-center">
-                 <div><i class="fa-regular fa-circle-question"></i></div>
-                 <h3 class="text-base font-extraBold text-heading-color">
-               Elit pellentesque habitant morbi tristique senectus?
-              </h3>
-               </div>
-              <div>
-                <i class="fas fa-chevron-down"></i>
+              <div class="faq-question">
+                <div class="flex items-center justify-center">
+                  <div><i class="fa-regular fa-circle-question"></i></div>
+                  <h3 class="text-base font-extraBold text-heading-color">
+                    Elit pellentesque habitant morbi tristique senectus?
+                  </h3>
+                </div>
+                <div>
+                  <i class="fas fa-chevron-down"></i>
+                </div>
               </div>
-             </div>
               <p class="faq-answer text-sm text-sub-heading-color">
-               Mattis ullamcorper velit sed ullamcorper morbi tincidunt. In metus vulputate eu scelerisque felis imperdiet proin fermentum leo. Diam quis enim lobortis scelerisque fermentum dui faucibus. Urna nunc id cursus metus aliquam eleifend mi. Gravida quis blandit turpis cursus in hac.
+                Mattis ullamcorper velit sed ullamcorper morbi tincidunt. In
+                metus vulputate eu scelerisque felis imperdiet proin fermentum
+                leo. Diam quis enim lobortis scelerisque fermentum dui faucibus.
+                Urna nunc id cursus metus aliquam eleifend mi. Gravida quis
+                blandit turpis cursus in hac.
               </p>
             </div>
             <!-- faq card 04  -->
             <div class="faq-card">
-             <div class="faq-question"">
-               <div class="flex items-center justify-center">
-                 <div><i class="fa-regular fa-circle-question"></i></div>
-                 <h3 class="text-base font-extraBold text-heading-color">
-               Gravida quis blandit turpis cursus in hac. Mi ipsum faucibus vitae aliquet nec?
-              </h3>
-               </div>
-              <div>
-                <i class="fas fa-chevron-down"></i>
+              <div class="faq-question">
+                <div class="flex items-center justify-center">
+                  <div><i class="fa-regular fa-circle-question"></i></div>
+                  <h3 class="text-base font-extraBold text-heading-color">
+                    Gravida quis blandit turpis cursus in hac. Mi ipsum faucibus
+                    vitae aliquet nec?
+                  </h3>
+                </div>
+                <div>
+                  <i class="fas fa-chevron-down"></i>
+                </div>
               </div>
-             </div>
               <p class="faq-answer text-sm text-sub-heading-color">
-               Mattis ullamcorper velit sed ullamcorper morbi tincidunt. In metus vulputate eu scelerisque felis imperdiet proin fermentum leo. Diam quis enim lobortis scelerisque fermentum dui faucibus. Urna nunc id cursus metus aliquam eleifend mi. Gravida quis blandit turpis cursus in hac.
+                Mattis ullamcorper velit sed ullamcorper morbi tincidunt. In
+                metus vulputate eu scelerisque felis imperdiet proin fermentum
+                leo. Diam quis enim lobortis scelerisque fermentum dui faucibus.
+                Urna nunc id cursus metus aliquam eleifend mi. Gravida quis
+                blandit turpis cursus in hac.
               </p>
             </div>
             <!-- faq card 05  -->
             <div class="faq-card">
-             <div class="faq-question"">
-                 <div class="flex items-center justify-center">
-                 <div><i class="fa-regular fa-circle-question"></i></div>
-                 <h3 class="text-base font-extraBold text-heading-color">
-                Est pellentesque elit ullamcorper dignissim cras. In pellentesque massa placerat?
-              </h3>
-               </div>
-              <div>
-                <i class="fas fa-chevron-down"></i>
+              <div class="faq-question">
+                <div class="flex items-center justify-center">
+                  <div><i class="fa-regular fa-circle-question"></i></div>
+                  <h3 class="text-base font-extraBold text-heading-color">
+                    Est pellentesque elit ullamcorper dignissim cras. In
+                    pellentesque massa placerat?
+                  </h3>
+                </div>
+                <div>
+                  <i class="fas fa-chevron-down"></i>
+                </div>
               </div>
-             </div>
               <p class="faq-answer text-sm text-sub-heading-color">
-               Mattis ullamcorper velit sed ullamcorper morbi tincidunt. In metus vulputate eu scelerisque felis imperdiet proin fermentum leo. Diam quis enim lobortis scelerisque fermentum dui faucibus. Urna nunc id cursus metus aliquam eleifend mi. Gravida quis blandit turpis cursus in hac.
+                Mattis ullamcorper velit sed ullamcorper morbi tincidunt. In
+                metus vulputate eu scelerisque felis imperdiet proin fermentum
+                leo. Diam quis enim lobortis scelerisque fermentum dui faucibus.
+                Urna nunc id cursus metus aliquam eleifend mi. Gravida quis
+                blandit turpis cursus in hac.
               </p>
             </div>
           </div>
         </div>
       </section>
       <!-- faq section end -->
+
+      <!-- Download the App Section Start -->
+      <!-- <section class="app-container">
+        <div class="max-width mx-auto grid justify-center items-center"> -->
+      <!-- Left Text Content -->
+      <!-- <div class="app-context">
+            <h1 class="font-extraBold text-4xl">Let's Download The App.</h1>
+            <p class="font-bold text-lg text-sub-heading-color">
+              Velit scelerisque in dictum non consectetur. Felis eget velit
+              aliquet sagittis. Ultricies integer quis auctor elit sed vulputate
+              mi. Massa id neque aliquam vestibulum morbi blandit cursus.
+            </p> -->
+
+      <!-- Buttons -->
+      <!-- <div class="button-group">
+              <a href="#" class="btn learn-more">Learn More</a>
+              <a href="#" class="btn get-started">Get Started</a>
+            </div>
+          </div> -->
+
+      <!-- Right Images -->
+      <!-- <div class="app-image">
+            <figure>
+              <img class="app-img-1" src="./assets/dash_d_4.png" alt="App screenshot 1" />
+            </figure>
+            <figure>
+              <img class="app-img-1" src="./assets/dash_d_5.png" alt="App screenshot 2" />
+            </figure>
+          </div>
+        </div>
+      </section> -->
+
+      <!-- download the app section end  -->
     </main>
+
+    <footer class="container">
+      <div class="max-width mx-auto">
+        <div class="grid footer-content">
+          <!-- column 01  -->
+          <div>
+            <h5 class="footer-title">Site Map</h5>
+            <div>
+              <p class="footer-sub-title">Homepage</p>
+              <p class="footer-sub-title">Product</p>
+              <p class="footer-sub-title">Services</p>
+              <p class="footer-sub-title">Technology</p>
+              <p class="footer-sub-title">About Us</p>
+              <p class="footer-sub-title">Contact Us</p>
+            </div>
+          </div>
+          <!-- column 02  -->
+          <div>
+            <h5 class="footer-title">Services</h5>
+            <div>
+              <p class="footer-sub-title">Service Lineup 1</p>
+              <p class="footer-sub-title">Service Lineup 2</p>
+              <p class="footer-sub-title">Service Lineup 3</p>
+              <p class="footer-sub-title">Service Lineup 4</p>
+              <p class="footer-sub-title">Service Lineup 5</p>
+              <p class="footer-sub-title">Service Lineup 6</p>
+            </div>
+          </div>
+          <!-- column 03  -->
+          <div>
+            <h5 class="footer-title">Product</h5>
+            <div>
+              <p class="footer-sub-title">Product Lineup 1</p>
+              <p class="footer-sub-title">Product Lineup 2</p>
+              <p class="footer-sub-title">Product Lineup 3</p>
+              <p class="footer-sub-title">Product Lineup 4</p>
+              <p class="footer-sub-title">Product Lineup 5</p>
+              <p class="footer-sub-title">Product Lineup 6</p>
+            </div>
+          </div>
+          <!-- column 04  -->
+          <div>
+            <h5 class="footer-title">Help & Support</h5>
+            <div>
+              <p class="footer-sub-title">Live Chat</p>
+              <p class="footer-sub-title">Email Support</p>
+              <p class="footer-sub-title">Product Refund</p>
+              <p class="footer-sub-title">Submit Feedback</p>
+              <p class="footer-sub-title">Help Ticket</p>
+              <p class="footer-sub-title">Call Center</p>
+            </div>
+          </div>
+          <!-- column 05  -->
+          <div>
+            <h5 class="footer-title">Legal</h5>
+            <div>
+              <p class="footer-sub-title">Privacy Policy</p>
+              <p class="footer-sub-title">HIPAA Notice</p>
+              <p class="footer-sub-title">Data Policy</p>
+              <p class="footer-sub-title">AI Privacy</p>
+              <p class="footer-sub-title">Terms & Conditions</p>
+              <p class="footer-sub-title">Lawyer’s Corner</p>
+            </div>
+          </div>
+          <!-- column 06  -->
+          <div>
+            <h5 class="footer-title">Pricing</h5>
+            <div>
+              <p class="footer-sub-title">Pricing Tier 1</p>
+              <p class="footer-sub-title">Pricing Tier 2</p>
+              <p class="footer-sub-title">Pricing Tier 3</p>
+              <p class="footer-sub-title">Pricing Tier 4</p>
+              <p class="footer-sub-title">Pricing Tier 5</p>
+              <p class="footer-sub-title">Pricing Tier 6</p>
+            </div>
+          </div>
+        </div>
+        <div class="divider"></div>
+        <div class="copyright-container">
+          <figure><img src="./assets/logo2.png" alt="logo" /></figure>
+          <div>
+            <i class="fas fa-chevron-down to-top"></i>
+          </div>
+          <p class="text-sm font-medium text-sub-heading-color">
+            Copyright 2028 slothUI, All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
 
     <!-- font awesome icons set  -->
 
