design banner section

--- a/index.html
+++ b/index.html
@@ -7,13 +7,44 @@
     <title>Sloth Ui || Home</title>
   </head>
   <body>
-    <header>
+    <header class="banner-container">
       <!-- navbar area start  -->
       <nav></nav>
       <!-- navbar area end-->
       <!-- banner area start  -->
-      <section>
-        <h1>hello</h1>
+      <section class="max-width mx-auto mt-96 mb-96">
+        <!-- banner title start -->
+        <div
+          class="max-width-800 mx-auto banner-title flex flex-col justify-center items-center"
+        >
+          <h5 class="font-semiBold text-sm text-center">
+            Design System For Gen Z
+          </h5>
+          <h1 class="font-extraBold text-5xl text-heading-color text-center">
+            Unleash Your Inner Design Sloth Today.
+          </h1>
+          <p
+            class="font-normal text-center text-xl text-sub-heading-color mx-auto"
+          >
+            Suspendisse faucibus interdum posuere lorem ipsum dolor sit amet.
+            Cras fermentum odio eu feugiat pretium nibh ipsum. Venenatis cras
+            sed felis eget velit aliquet.
+          </p>
+          <!-- app image icon  -->
+          <div class="flex items-center justify-center app-img-icon">
+            <figure><img src="./assets/app_store.png" alt="" /></figure>
+            <figure><img src="./assets/g_play.png" alt="" /></figure>
+          </div>
+        </div>
+        <!-- banner title end  -->
+
+        <!-- app screenshot  -->
+        <div class="app-image-container">
+          <div class="images-wrapper">
+            <img class="big-image" src="./assets/dash_d_1.png" alt="" / >
+            <img class="small-image" src="./assets/dash_m_2.png" alt="" />
+          </div>
+        </div>
       </section>
       <!-- banner area end  -->
     </header>
