--- a/index.html
+++ b/index.html
@@ -9,8 +9,29 @@
   <body>
     <header class="banner-container">
       <!-- navbar area start  -->
-      <nav></nav>
+      <nav class="max-width mx-auto">
+        <div class="navbar-container">
+          <figure>
+            <img src="./assets/Logo2.png" alt="" />
+          </figure>
+          <!-- Hamburger icon for small screens -->
+          <div class="menu-icon" onclick="toggleMenu()">
+            <i class="fas fa-bars"></i>
+          </div>
+          <ul class="menu-list">
+            <li>Features</li>
+            <li>Achievements</li>
+            <li>Testimonials</li>
+            <li>FAQ</li>
+          </ul>
+          <div class="button-group">
+            <a href="#" class="btn learn-more">Sign Up</a>
+            <a href="#" class="btn get-started">Login</a>
+          </div>
+        </div>
+      </nav>
       <!-- navbar area end-->
+
       <!-- banner area start  -->
       <section class="max-width mx-auto mt-96 mb-96">
         <!-- banner title start -->
