added add donwload section

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <i class="fas fa-bars"></i>
           </div>
           <ul class="menu-list">
-            <li>Features</li>
-            <li>Achievements</li>
-            <li>Testimonials</li>
-            <li>FAQ</li>
+            <li><a href="features">Features</a></li>
+            <li><a href="achievements">Achievements</a></li>
+            <li><a href="testimonials">Testimonials</a></li>
+            <li><a href="faq">FAQ</a></li>
           </ul>
           <div class="button-group">
             <a href="#" class="btn learn-more">Sign Up</a>
@@ -94,7 +94,7 @@
       <!-- spoonser banner end -->
 
       <!-- primary features start  -->
-      <section class="max-width mx-auto mt-96 mb-96">
+      <section id="features" class="max-width mx-auto mt-96 mb-96">
         <!-- section title start -->
         <div class="section-title flex flex-col justify-center items-center">
           <h5 class="font-semiBold text-sm text-center">Our Main Features</h5>
@@ -562,6 +562,10 @@
             </div>
           </div>
           <!-- reviews area end -->
+
+          <div class="testimonial-btn">
+            <a href="#" class="btn get-started">Learn More +</a>
+          </div>
         </div>
       </section>
       <!-- testimonial section end -->
@@ -760,42 +764,49 @@
         </div>
       </section>
       <!-- faq section end -->
-
       <!-- Download the App Section Start -->
-      <!-- <section class="app-container">
-        <div class="max-width mx-auto grid justify-center items-center"> -->
-      <!-- Left Text Content -->
-      <!-- <div class="app-context">
+      <section class="app-container">
+        <div class="max-width mx-auto grid justify-center items-center">
+          <!-- Left Text Content -->
+          <div class="app-context">
             <h1 class="font-extraBold text-4xl">Let's Download The App.</h1>
             <p class="font-bold text-lg text-sub-heading-color">
               Velit scelerisque in dictum non consectetur. Felis eget velit
               aliquet sagittis. Ultricies integer quis auctor elit sed vulputate
               mi. Massa id neque aliquam vestibulum morbi blandit cursus.
-            </p> -->
+            </p>
 
-      <!-- Buttons -->
-      <!-- <div class="button-group">
+            <!-- Buttons -->
+            <div class="app-button-group">
               <a href="#" class="btn learn-more">Learn More</a>
               <a href="#" class="btn get-started">Get Started</a>
             </div>
-          </div> -->
+          </div>
 
-      <!-- Right Images -->
-      <!-- <div class="app-image">
-            <figure>
-              <img class="app-img-1" src="./assets/dash_d_4.png" alt="App screenshot 1" />
+          <!-- Right Images -->
+          <div class="app-image">
+            <figure class="first-image">
+              <img
+                class="app-img-1"
+                src="./assets/dash_d_4.png"
+                alt="App screenshot 1"
+              />
             </figure>
-            <figure>
-              <img class="app-img-1" src="./assets/dash_d_5.png" alt="App screenshot 2" />
+            <figure class="second-image">
+              <img
+                class="app-img-1"
+                src="./assets/dash_d_5.png"
+                alt="App screenshot 2"
+              />
             </figure>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <!-- download the app section end  -->
     </main>
 
-    <footer class="container">
+    <footer class="container pb-96 pt-96">
       <div class="max-width mx-auto">
         <div class="grid footer-content">
           <!-- column 01  -->
